--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -78,10 +78,10 @@
                 <mat-label>Sort By</mat-label>
                 <mat-select [formControl]="sortOption">
                     <mat-option value="relevance">Relevance</mat-option>
-                    <mat-option value="price-asc">Price: Low to High</mat-option>
-                    <mat-option value="price-desc">Price: High to Low</mat-option>
-                    <mat-option value="rating-desc">Rating: High to Low</mat-option>
-                    <mat-option value="name-asc">Name: A-Z</mat-option>
+                    <mat-option value="price:asc">Price: Low to High</mat-option>
+                    <mat-option value="price:desc">Price: High to Low</mat-option>
+                    <mat-option value="rating:desc">Rating: High to Low</mat-option>
+                    <mat-option value="name:asc">Name: A-Z</mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
@@ -120,7 +120,7 @@
                     <button mat-raised-button color="primary" class="add-to-cart-button">
                         <mat-icon>add_shopping_cart</mat-icon> Add to Cart
                     </button>
-                    <button mat-stroked-button color="accent">
+                    <button mat-stroked-button color="accent" [routerLink]="[`/products-details/${product._id}`]" >
                         Details
                     </button>
                 </mat-card-actions>
